# uber-collec

./: .gitignore  CAHIER_DES_CHARGES.md  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: APIS.md  GUIDE.md
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: defaults.rs  enrich.rs  export.rs  hydrate.rs  import.rs  index.rs  lib.rs  main.rs  mobile.rs  model.rs  stats.rs  store.rs  sync.rs
src/components/: ApiKeysPanel.tsx  Dashboard.tsx  HydrateSearch.tsx  ImportWizard.tsx  ItemForm.tsx  ItemView.tsx  LabelsPanel.tsx  MobileSetup.tsx  PersonsPanel.tsx  SchemaEditor.tsx  SeriesPanel.tsx  SyncPanel.tsx
